--- a/5065note.md
+++ b/5065note.md
@@ -365,3 +365,77 @@ Following commands do not need `fs -`:
      - int, long, float: float
      - int, ling, float, double: double
   - No casting between numeric and char. 
+  
+# 4.10
+## Pig relations
+- Similar to tables in relational database
+- Like a bag
+- Not required to havesame number of fields, nor the fields at same position have the same type
+- **Tuple**=<u>ordered</u> set of field
+- **Field**=piece of data and it has a name (starts with a character)
+- In `input=load 'data'`, input is the name of relation that results from loading the data
+- Relation name is referred as 'alias', which looks like variables, but not actually.
+- Reuse relation:
+  ```
+  r=load 'data' as (a, b, c, d)
+  r=filter r by d>0
+  r=foreach r generate upper(b)
+  ```
+
+## Pig comments
+`-- whole line comment` OR `/* in-line comment */` OR:
+```
+/*
+comment block
+*/
+```
+## Input & Output
+### Input
+- `divs=load 'data' using HBaseStorage();`
+
+- Specific data type:
+`divs=load 'data' using PigStorage(',')`
+
+### Output
+- `stored processed into 'uri' <using ??>`
+  - If not specify `using`, stored delimited data by tab 
+- `dump processed`: output to screen
+  
+## `foreach`
+```
+a =load 'data' as (user:chararray,id:long, addr:chararray);
+b=foreach a generate user,id;
+```
+
+- Position (starts from **0**!):
+`var1=foreach item generate $6-$3` (6th-3rd)
+
+- Range (can be used with position):
+`var2=foreach item generate from..end;`
+
+## Binary condition operator
+`var1==var2?[true return]:[false return]`
+- 2 return values must have same data type
+- E.g.:
+```
+b=foreach a generate 
+(month==2?28:
+(month==4 or month==6 or month==9 or month==1?30:31))
+```
+# 4.12
+### `foreach`
+`foreach [iterable] generate [attribute]`
+
+```
+A=load 'input' as (b:bag{t:(x:int,y:int)})
+foreach A generate A.(x,y)
+```
+
+### `filter`
+
+`newdata= filter [olddata] by ([condition])`
+
+**condition**:
+- `[attribute] == [value]`
+- `[attribute] matches [wildcard]`
+- `[attribute] is <not> null`
