--- a/blog/compile.ipynb
+++ b/blog/compile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,14 +46,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "relativeDir=sys.argv[0]\n",
-    "\n",
-    "for i in range(os.listdir(relativeDir)):\n",
-    "    print(i)"
+    "def parse_string(s):\n",
+    "    # Regular expression to match date, tags, and title\n",
+    "    match = re.match(r'(\\{([^}]*)\\})?\\[([^]]*)\\]?(.*)', s)\n",
+    "    \n",
+    "    # Handle different bracket orders\n",
+    "    if match.group(1) and match.group(3):\n",
+    "        date = match.group(2)\n",
+    "        tags = match.group(3).split(',')\n",
+    "        title = match.group(4)\n",
+    "    elif match.group(1):\n",
+    "        date = match.group(2)\n",
+    "        tags = []\n",
+    "        title = match.group(4)\n",
+    "    elif match.group(3):\n",
+    "        date = ''\n",
+    "        tags = match.group(3).split(',')\n",
+    "        title = match.group(4)\n",
+    "    \n",
+    "    # Convert date to integer if not empty\n",
+    "    date = int(date) if date else ''\n",
+    "    \n",
+    "    return date, tags, title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20120918, ['web', 'personal'], 'I am title')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse_string('{20120918}[web,personal]I am title')"
    ]
   }
  ],
