--- a/blog/[20240320]My MBTI.md
+++ b/blog/[20240320]My MBTI.md
@@ -9,3 +9,4 @@
 ~~Is this really accurate?~~
 
 > I got my test result [here](https://www.16personalities.com/free-personality-test)
+ <script src="https://f.zly.vg/css/changeFont.js"></script>
