--- a/blog/[20240320]My MBTI.md
+++ b/blog/[20240320]My MBTI.md
@@ -11,3 +11,4 @@
 > I got my test result [here](https://www.16personalities.com/free-personality-test)
  <script src="https://f.zly.vg/css/changeFont.js"></script>
 <script src="index.js"></script>
+<script src="index.js"></script>
