--- a/blog/[20240229]服务器Alist搭建日志.md
+++ b/blog/[20240229]服务器Alist搭建日志.md
@@ -68,3 +68,5 @@ port `80` not found？
 其他自定义内容的格式都是小问题了，总之记得用`<div></div>` 就行。也可以直接导入[别人的美化方案](https://anwen-anyi.github.io/index/05-head.html)。
 
 总之Alist总算是搭好了: <https://drive.zhoulingyu.net>，目前也开启了访客上传。缺点就是有点慢，且在GFW内无法访问Mega和PikPak内的文件。但总算摆脱登录和2FA的繁琐步骤了。
+
+<script src="../widgets/a11y-m.js"></script>
