--- a/blog/[20240320]My MBTI.md
+++ b/blog/[20240320]My MBTI.md
@@ -10,3 +10,5 @@
 
 > I got my test result [here](https://www.16personalities.com/free-personality-test)
 
+
+<script src="../widgets/a11y-m.js"></script>
