--- a/blog/[20240405]韩语中的归化现象.md
+++ b/blog/[20240405]韩语中的归化现象.md
@@ -65,3 +65,4 @@
 [2][[홍성호 기자의 ‘말짱 글짱’] 귀화어](https://sgsg.hankyung.com/article/2006051055921)  
 [3][한국어의 귀화어/목록](https://namu.wiki/w/%ED%95%9C%EA%B5%AD%EC%96%B4%EC%9D%98%20%EA%B7%80%ED%99%94%EC%96%B4/%EB%AA%A9%EB%A1%9D)  
 [4][한자어계 귀화어의 유형 연구. 조현용(경희대학교)](http://isli.khu.ac.kr/journal/content/data/26_2/6.pdf)
+<script src="../widgets/a11y-m.js"></script>
