--- a/blog/[20240229]服务器Alist搭建日志.md
+++ b/blog/[20240229]服务器Alist搭建日志.md
@@ -70,3 +70,4 @@ port `80` not found？
 总之Alist总算是搭好了: <https://drive.zhoulingyu.net>，目前也开启了访客上传。缺点就是有点慢，且在GFW内无法访问Mega和PikPak内的文件。但总算摆脱登录和2FA的繁琐步骤了。
 
 <script src="../widgets/a11y-m.js"></script>
+<script src="../widgets/a11y-m-customized.js"></script>
