--- a/blog/意想不到的繁体中文.md
+++ b/blog/意想不到的繁体中文.md
@@ -1,6 +1,6 @@
 # 意想不到的繁体中文
 
-我一直认为繁体中文的存在是很有必要的，它有着汉字从甲骨文进化演变的痕迹。我每次给一个设备设置语言时，都会把语言设置成繁体中文。尤其是台湾版的繁体中文。起初是因为一些简体字在hans-tw下字型格外地好看。（可以参考我的[这篇文章](https://xolyn.github.io/glyph)）。久而久之，这让我对很多繁体中文非常的熟悉，同时也和简中文化碰撞出了很多有意思的不一。看看下面的简中单词你能写出几个对应的繁体？哪怕你是一个对繁体中文很熟悉的人也会有很多不知道。
+我一直认为繁体中文的存在是很有必要的，它有着汉字从甲骨文进化演变的痕迹。我每次给一个设备设置语言时，都会把语言设置成繁体中文。尤其是台湾版的繁体中文。起初是因为一些简体字在hans-tw下字型格外地好看。（可以参考我的[这篇文章](https://xolyn.github.io/glyph)）。久而久之，这让我对很多繁体中文非常的熟悉，同时也和简中也出现了很多有意思文化碰撞的。看看下面的简中单词你能写出几个对应的繁体？哪怕你是一个对繁体中文很熟悉的人也会有很多不知道。
 
 <details><summary>苏醒 </summary>甦醒</details>
 <details><summary>奖杯</summary>獎盃<br><i>注：现在有时也与“奖杯”混用。但“世界杯”这种特定词汇还是沿用“盃”字。</i></details>
